Fixed Events page header on Mobile (#149)
* :art: Fixed Events page header on Mobile

* Events Page Header now Centered, Removed unnecessary code

--- a/client/src/components/Event/Event.css
+++ b/client/src/components/Event/Event.css
@@ -6,10 +6,7 @@
     font-family: 'Raleway';
     color: #EE2A7B;
     font-size: 8vh;
-    width: auto;
-    height: auto;
     opacity: 1;
-    margin-bottom: 5vh;
-    margin-top: 5vh;
-    margin-left: 40vw;
+    margin: 5vh 0;
+    text-align: center;   
 }
